# platosim3

./: .buildinfo  .gitignore  .rgignore  AboutJenkins.html  Branching.html  Building.html  CHANGELOG.md  CHANGES  CMakeLists.txt  ConfigurationParameters.html  Dockerfile.txt  DownloadUpdateBuild.html  Doxyfile  InputFileDescription.html  InstallUsersDevelopers.html  InstallViaConda.html  IssueTracking.html  LICENSE.txt  Makefile  MigrationTool.html  OutputFileDescription.html  README.md  README.txt  ReadMe_Straylight.org  ReleaseNotes.md  ReqsInstallUpdate.html  ReqsInstallViaConda.html  ReqsRun.html  Running.html  ScriptingInPython.html  Simulating.html  SimulationSteps.html  Straylight_feedback.md  SupplementaryFiles.html  Tutorials.html  Updating.html  ViaConda.html  _input_file_description.html  _install_users_developers.html  _migration_tool.html  (+92 more)
.metadata/: version.ini
_build/doctrees/: README.doctree
_sources/: basic_acknowledgements.rst.txt  basic_architecture.rst.txt  basic_intro.rst.txt  basic_troubleshooting.rst.txt  basis_installation.rst.txt  basis_python.rst.txt  groundL1_overview.rst.txt  help.rst.txt  hpc_advanced.rst.txt  hpc_overview.rst.txt  hpc_platosim.rst.txt  hpc_resources.rst.txt  index.rst.txt  install_conda.rst.txt  install_migtool.rst.txt  install_overview.rst.txt  l1_installation.rst.txt  l1_lightcurve.rst.txt  l1_overview.rst.txt  l1_troubleshooting.rst.txt  platonium_cluster.rst.txt  platonium_overview.rst.txt  platonium_pipeline.rst.txt  platonium_pipeline_v2.rst.txt  platonium_prerequisites.rst.txt  platonium_tutorials.rst.txt  python_platonium.rst.txt  python_prerequisites.rst.txt  repo_acknowledgements.rst.txt  repo_troubleshooting.rst.txt  repo_tutorial.rst.txt  run_input.rst.txt  run_output.rst.txt  run_prerequisites.rst.txt
_static/: basic.css  documentation_options.js
dependencies/Downloads/: ._armadillo-6.500.4  ._fftw-3.3.4  ._googletest  ._hdf5-1.8.16  ._yaml-cpp  Faddeeva.tgz  fftw-3.3.4.tgz  googletest.tgz  yaml-cpp.tgz
dependencies/installscripts/: install_armadillo.py  install_faddeeva.py  install_fftw.py  install_googletest.py  install_hdf5.py  install_yaml.py  install_zeromq.py
docs/: InputFile.md  MainPage.md
docs/compose/: FineGuidanceStarsFCAMs.ipynb  MultiCameraConfiguration.ipynb  PointingAndAlignmentErrors.ipynb  SaturatedStars.ipynb
docs/html/: AboutJenkins.html  Branching.html  Building.html  ConfigurationParameters.html  DownloadUpdateBuild.html  Downloading.html  InputFileDescription.html  InstallUsersDevelopers.html  InstallViaConda.html  IssueTracking.html  MigrationTool.html  OutputFileDescription.html  ReqsInstallUpdate.html  ReqsInstallViaConda.html  ReqsRun.html  Running.html  Tutorials.html  (+56 more)
include/: AbstractDetectorFactory.h  ArrayOperations.h  AsymmetricalPointSpreadFunction.h  Camera.h  CameraSpectral.h  Clock.h  ClosedLoopDetectorClasses.h  ClosedLoopHDF5File.h  ClosedLoopUtility.h  ConfigurationFormat.h  ConfigurationParameters.h  Constants.h  Convolver.h  Coordinates.h  Detector.h  DetectorWithAnalyticGaussianPSF.h  DetectorWithAnalyticNonGaussianPSF.h  DetectorWithAsymmetricalMappedPSF.h  DetectorWithMappedPSF.h  DetectorWithSymmetricalMappedPSF.h  DriftGenerator.h  Exceptions.h  FileUtilities.h  FrontEndElectronics.h  HDF5Exceptions.h  HDF5File.h  HDF5Writer.h  Heartbeat.h  JSonFormat.h  JitterFromFile.h  JitterFromNetwork.h  JitterFromRedNoise.h  JitterGenerator.h  Logger.h  MappedDistortion.h  Mathematics.h  NoDrift.h  NoJitter.h  NominalTemperature.h  Parameter.h  (+46 more)
inputfiles/: Plato_Straylight_PST.txt  Plato_straylight_example_index_2574.csv  distortioncoefficients.txt  distortioninversecoefficients.txt  fporientation.txt  guide_stars_EQ.txt  inputfgs.yaml  inputfile.yaml  inputfileFast.yaml  inputfile_FCAM_required.yaml  orbit.txt  photometricPipeline.yaml  photometryTargets.txt  psf.hdf5.REMOVED.git-id  psfallv3.txt  pst.hdf5  starcatalog.txt  starcatalogOld.txt  starcatalogTempExample.txt
python/: InsertPointSource.py  SpotMask.py  analyticpsf.py  demoCreateStarCatalog.py  demo_slurm.py  fgs.py  h5.py  hdf5ToFits.py  input4ComparisonWithPIS.py  magnitudeDistribution.py  migtool.py  multiTelescopeConfiguration.py  parallel_fgs.py  photometricPipeline.py  platophot.py  platophot2.py  plot.py  referenceFrames.py  showSim.py  simfile.py  simulation.py  simulation_demo.py  star.py  transits.py  validation.py  yamlConfigurable.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_8.js  all_9.js  all_b.js  files_1.js  files_3.js  files_6.js  files_a.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_7.js  pages_8.js  pages_9.js  pages_b.js  searchdata.js
source/: ArrayOperations.cpp  AsymmetricalPointSpreadFunction.cpp  Camera.cpp  CameraSpectral.cpp  Clock.cpp  ClosedLoopDetectorClasses.cpp  ClosedLoopUtility.cpp  ConfigurationException.cpp  ConfigurationFile.md  ConfigurationFormat.cpp  ConfigurationParameters.cpp  Convolver.cpp  Coordinates.cpp  Detector.cpp  DetectorWithAnalyticGaussianPSF.cpp  DetectorWithAnalyticNonGaussianPSF.cpp  DetectorWithAsymmetricalMappedPSF.cpp  DetectorWithMappedPSF.cpp  DetectorWithSymmetricalMappedPSF.cpp  FileException.cpp  FileUtilities.cpp  FrontEndElectronics.cpp  HDF5Exceptions.cpp  HDF5File.cpp  HDF5Writer.cpp  Heartbeat.cpp  IOException.cpp  IllegalArgumentException.cpp  InputFile.md  Install4UsersAndDevelopers.md  JSonFormat.cpp  JitterFromFile.cpp  JitterFromNetwork.cpp  JitterFromRedNoise.cpp  Logger.cpp  MainPage.md  MappedDistortion.cpp  Mathematics.cpp  NoDrift.cpp  NoJitter.cpp  (+65 more)
testData/: input-with-comments.json  input.json  input.yaml  input_CameraTest.yaml  input_ConfigurationParametersTest.yaml  input_DetectorTest.yaml  input_PointSpreadFunctionTest.yaml  input_StarCatalogTest.yaml  windowPositions.txt
tests/: AllTests.cpp  GTestArrayOperations.h  GTestCamera.h  GTestConfigurationParameters.h  GTestCoordinates.h  GTestDetector.h  GTestFileUtilities.h  GTestPointSpreadFunction.h  GTestPolynomial.h  GTestSkyCoordinates.h  GTestStarCatalog.h  GTestStringUtilities.h  GTestUnits.h  PrettyPrinters.h
(+677 files in other folders)
