[tool.poetry]
name = "platosim"
version = "3.6.0"
description = "PlatoSim: A end-to-end PLATO camera simulator"
authors = ["KU Leuven and the PlatoSim team <nicholas.jannsen@kuleuven.be>"]
readme = "README.md"
packages = [{include = "python/platosim"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyaml = "^21.10.1"
h5py = "^3.6.0"
tqdm = "^4.65.0"
colorama = "^0.4.4"
argos = "^0.4.4"
prettytable = "^3.2.0"
descartes = "^1.1.0"
Shapely = "^1.8.1"
DateTime = "^4.4"
numpy = "^1.22.3"
pandas = "^1.4.1"
scipy = "^1.3.0"
scikit-image = "^0.19.2"
astropy = "^5.0.2"
matplotlib = "^3.5.1"
ipywidgets = "^8.0.2"
# NOTE: jupyter is extremely slow if not jupyter-client and tornado are the versions from below!
notebook = ">=6.4.6,<6.4.7"
jupyter-client = "7.3.2"
tornado = "6.1.0"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^4.5.0"
renku-sphinx-theme = "^0.2.2"

[tool.poetry.group.platonium]
optional = true
[tool.poetry.group.platonium.dependencies]
zipp = "^3.7.0"
natsort = "^8.2.0"
numba = "^0.56.4"
astroquery = "^0.4.6"
LDTk = "^1.7.0"
wotan = "^1.10"
batman-package = "^2.4.8"
transitleastsquares = "^1.0.31"
PyAstronomy = "^0.17.1"
statsmodels = "^0.13.5"
joblib = "^1.3.2"
lmfit = "^1.2.2"
"ligo.skymap" = "^0.6.1"

[tool.poetry.group.pipeline]
optional = true
[tool.poetry.group.pipeline.dependencies]
ipython = "^8.3.0"
Cython = "^0.29.28"
numba = "^0.56.4"
llvmlite = "0.39.1"
mpi4py = "^3.1.3"
PyQt5 = "^5.15.6"
pyarrow = "^7.0.0"
#PyMT64 = "^1.9"

# The following group is only used for the PlatoSim paper
[tool.poetry.group.pyxel]
optional = true
[tool.poetry.group.pyxel.dependencies]
pyxel-sim = "^1.9.1"
cosmix = "^0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
