[tool.poetry]
name = "platosim"
version = "3.7.0"
description = "PlatoSim: An end-to-end PLATO camera simulator"
authors = ["KU Leuven and the PlatoSim team <nicholas.jannsen@kuleuven.be>"]
readme = "README.md"
packages = [{include = "python/platosim"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyaml = "^21.10.1"
h5py = "^3.6.0"
tqdm = "^4.65.0"
colorama = "^0.4.4"
prettytable = "^3.2.0"
Shapely = "^2.0.0"
DateTime = "^4.4"
numpy = "^1.22.3"
pandas = "^1.4.1"
scipy = "^1.15.0"
scikit-image = "^0.19.2"
astropy = "^6.0"
matplotlib = "^3.5.1"
ipywidgets = "^8.0.2"
notebook = ">=6.4.6,<6.4.7"
jupyter-client = "7.3.2"
traitlets = "5.9.0"
tornado = "6.1.0"
jupyter = "^1.1.1"
holoviews = "^1.21.0"

[tool.poetry.group.platonium]
optional = true
[tool.poetry.group.platonium.dependencies]
argos = "^0.4.4"
pyarrow = "^13.0.0"
zipp = "^3.7.0"
natsort = "^8.2.0"
llvmlite = "^0.40.0"
numba = "^0.57.0"
astroquery = ">=0.4.6, <0.4.8"
LDTk = "^1.7.0"
wotan = "^1.10"
batman-package = "^2.4.8"
transitleastsquares = "^1.0.31"
PyAstronomy = "^0.17.1"
statsmodels = "^0.13.5"
joblib = "^1.3.2"
lmfit = "^1.2.2"
"ligo.skymap" = "2.4.1rc1"


[tool.poetry.group.pipeline]
optional = true
[tool.poetry.group.pipeline.dependencies]
Cython = "^0.29.28"
mpi4py = "^3.1.3"


[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.0"
renku-sphinx-theme = "^0.5.0"

# Packages for projects below

[tool.poetry.group.lightkurve]
optional = true
[tool.poetry.group.lightkurve.dependencies]
lightkurve = "^2.5.0"

[tool.poetry.group.pandora]
optional = true
[tool.poetry.group.pandora.dependencies]
pandoramoon = "^1.2"
ultranest = "^4.4.0"
dynasty = "^0.0.3"

[tool.poetry.group.pyxel]
optional = true
[tool.poetry.group.pyxel.dependencies]
pyxel-sim = "^1.9.1"
cosmix = "^0.2"

[poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

